# transifex-discord-webhook

./: .gitignore  README.md  main.py  pm2.json  pyproject.toml  ruff.toml
tdw/: api.py  embeds.py  index.html  models.py  utils.py
